# minigrad

./: .gitmodules  CMakeLists.txt  README.md  build.py
include/: .value.h.swp  tensor.h  tensor_accessor.h  tensor_shape_utils.h  tensor_storage.h
src/: CMakeLists.txt  main.cpp  tensor_shape_utils.cpp
test/: CMakeLists.txt  tensor_shape_utils_tests.cpp  tensor_storage_tests.cpp  tensor_tests.cpp  value_tests.cpp
